# ProjetTAL

./: .replit  README.md  README.txt  pyproject.toml  requirements.txt
TP_2/EXO2/: projet.py
TP_2/EXO3/: faischier.py  wsj_0010_sample.txt.pos.lima
TP_2/EXO4/: wsj_0010_sample.txt.pos.lima
TP_3/: wsj_0010_sample.pos.ref  wsj_0010_sample.pos.univ.ref  wsj_0010_sample.pos.univ.ref2  wsj_0010_sample.txt.pos.nltk
data/: POSTags_PTB_Universal_Linux.txt  PosTag_CONLL.txt  alignPOSTaggerOutputWithReference.py  eference.txt.conll.final  eference.txt.conll.final.lima  eference.txt.conll.final.nltk  est.txt  est.txt.lima  est.txt.ne.lima  est.txt.ne.lima.conll  est.txt.ne.nltk  est.txt.ne.nltk.bis  est.txt.ne.nltk.bis.conll  est.txt.ne.nltk.bis.conll.final  est.txt.ne.nltk.conll  est.txt.ne.stanford.conll  est.txt.ne.stanford.conll.final  extractFirstColumnOfPOSTaggerOutput.pl  ne_test.txt.ne.nltk  ne_test.txt.ne.stanford  ne_test.txt.ne.stanford.conll  ne_test.txt.ne.stanford.test  pos_reference.txt  pos_reference.txt.nltk  pos_reference.txt.univ  pos_reference.txt.univ.firstColonne  pos_reference.txt.univ.stanford  pos_test.txt  pos_test.txt.pos.nltk.univ.firstColonne  pos_test.txt.pos.stanford.univ  pos_test.txt.pos.stanford.univ.firstColonne.Filter
doc/: Honnet-Vittone.docx  Honnet-Vittone2.docx
src/: Compte.py  NLTK.py  fonctionConvertisseur.py  fonctionDecoupage.py  fonctionFinalize.py  fonctionFormatage.py  fonctionRetabli.py  projet.py
src/NE/: Compte.py  LimaNeFormatage.py  NE_NLTK.py  convEnToEtiq.py  lima-conll.py  limaConll.py  stanford-lima.py  (+1 more)
(+12 files in other folders)
