[tool.poetry]
name = "projettal"
version = "0.1.0"
description = ""
authors = ["Hutuun <Sullivan1.honnet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
